%%{init: {'theme':'base','themeVariables':{'fontFamily':'Arial','primaryColor':'#F7F3F2','primaryTextColor':'#171717','primaryBorderColor':'#B4232F','lineColor':'#5B6068','secondaryColor':'#F3F4F6','tertiaryColor':'#FFFFFF','clusterBkg':'#FFFFFF','clusterBorder':'#D1D5DB','actorBkg':'#FFFFFF','actorBorder':'#B4232F','actorTextColor':'#171717','signalColor':'#404040','signalTextColor':'#171717','noteBkgColor':'#FFF7ED','noteBorderColor':'#C2410C','noteTextColor':'#171717'}}}%%
classDiagram
    class MonitoredTable {+UUID id;+json check_config;+json autopilot}
    class CustomMonitor {+UUID id;+string sql_query;+string severity;+json last_result}
    class Monitor {+UUID id;+string name;+string mode;+string status;+int current_revision}
    class MonitorRevision {+UUID id;+int revision;+json definition;+string definition_hash;+string schema_fingerprint}
    class MonitorRun {+UUID id;+string idempotency_key;+string trigger_type;+string status;+json measurements;+json result}
    class EvaluationState {+string phase;+int breach_streak;+int recovery_streak;+datetime cooldown_until;+int version}
    MonitoredTable "1" *-- "0..*" CustomMonitor
    MonitoredTable "1" *-- "0..*" Monitor
    Monitor "1" *-- "1..*" MonitorRevision
    Monitor "1" *-- "0..*" MonitorRun
    MonitorRevision "1" -- "0..*" MonitorRun
    Monitor "1" *-- "0..1" EvaluationState
